--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,16 @@
 .input {
     width: 300px;
 }
+
+.thumbnail {
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    object-fit: cover;
+}
