--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,21 @@
 }
 
 .thumbnail {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.card-img {
+    width: 200px;
+    height: 200px;
     border-radius: 10px;
     display: block;
     margin-left: auto;
