--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,3 +64,10 @@
 .form-control {
     flex: 1;
 }
+
+#error-image { 
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin: auto;
+}
